fix(spo): Even more dark mode stuff

--- a/src/nz-zorro.scss
+++ b/src/nz-zorro.scss
@@ -13171,7 +13171,7 @@ textarea.ant-input-affix-wrapper {
     border-right-width: 1px;
 }
 .ant-input[disabled] {
-    color: rgba(0, 0, 0, 0.25);
+    color: $devui-disabled-text;
     background-color: $devui-disabled-bg;
     border-color: #d9d9d9;
     box-shadow: none;
